// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`running "projen" with no arguments will execute .projenrc.js 1`] = `
Object {
  ".gitignore": "# ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".
node_modules/
!/.gitattributes
!/.projen/tasks.json
!/.projen/deps.json
!/.projen/files.json
",
  ".projen/files.json": Object {
    "//": "~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".",
    "files": Array [
      ".gitattributes",
      ".gitignore",
      ".projen/deps.json",
      ".projen/files.json",
      ".projen/tasks.json",
    ],
  },
  ".projen/tasks.json": Object {
    "//": "~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".",
    "tasks": Object {
      "build": Object {
        "description": "Full release build",
        "name": "build",
        "steps": Array [
          Object {
            "spawn": "default",
          },
          Object {
            "spawn": "pre-compile",
          },
          Object {
            "spawn": "compile",
          },
          Object {
            "spawn": "post-compile",
          },
          Object {
            "spawn": "test",
          },
          Object {
            "spawn": "package",
          },
        ],
      },
      "compile": Object {
        "description": "Only compile",
        "name": "compile",
      },
      "default": Object {
        "description": "Synthesize project files",
        "name": "default",
      },
      "eject": Object {
        "description": "Remove projen from the project",
        "env": Object {
          "PROJEN_EJECTING": "true",
        },
        "name": "eject",
        "steps": Array [
          Object {
            "spawn": "default",
          },
        ],
      },
      "package": Object {
        "description": "Creates the distribution package",
        "name": "package",
      },
      "post-compile": Object {
        "description": "Runs after successful compilation",
        "name": "post-compile",
      },
      "pre-compile": Object {
        "description": "Prepare the project for compilation",
        "name": "pre-compile",
      },
      "test": Object {
        "description": "Run tests",
        "name": "test",
      },
    },
  },
  ".projen/tree.json": Object {
    "tree": Object {
      "children": Object {
        ".gitattributes": Object {
          "constructInfo": Object {
            "fqn": "projen.GitAttributesFile",
            "version": "0.0.0",
          },
          "id": ".gitattributes",
          "path": "foo/.gitattributes",
        },
        ".gitignore": Object {
          "constructInfo": Object {
            "fqn": "projen.IgnoreFile",
            "version": "0.0.0",
          },
          "id": ".gitignore",
          "path": "foo/.gitignore",
        },
        ".projen--files.json": Object {
          "constructInfo": Object {
            "fqn": "projen.JsonFile",
            "version": "0.0.0",
          },
          "id": ".projen--files.json",
          "path": "foo/.projen--files.json",
        },
        "Dependencies": Object {
          "children": Object {
            ".projen--deps.json": Object {
              "constructInfo": Object {
                "fqn": "projen.JsonFile",
                "version": "0.0.0",
              },
              "id": ".projen--deps.json",
              "path": "foo/Dependencies/.projen--deps.json",
            },
          },
          "constructInfo": Object {
            "fqn": "projen.Dependencies",
            "version": "0.0.0",
          },
          "id": "Dependencies",
          "path": "foo/Dependencies",
        },
        "Logger": Object {
          "constructInfo": Object {
            "fqn": "projen.Logger",
            "version": "0.0.0",
          },
          "id": "Logger",
          "path": "foo/Logger",
        },
        "ProjectBuild": Object {
          "constructInfo": Object {
            "fqn": "projen.ProjectBuild",
            "version": "0.0.0",
          },
          "id": "ProjectBuild",
          "path": "foo/ProjectBuild",
        },
        "Tasks": Object {
          "children": Object {
            ".projen--tasks.json": Object {
              "constructInfo": Object {
                "fqn": "projen.JsonFile",
                "version": "0.0.0",
              },
              "id": ".projen--tasks.json",
              "path": "foo/Tasks/.projen--tasks.json",
            },
          },
          "constructInfo": Object {
            "fqn": "projen.Tasks",
            "version": "0.0.0",
          },
          "id": "Tasks",
          "path": "foo/Tasks",
        },
      },
      "constructInfo": Object {
        "fqn": "projen.Project",
        "version": "0.0.0",
      },
      "id": "foo",
      "path": "foo",
    },
    "version": "tree-0.1",
  },
  ".projenrc.js": "new (require('projen').Project)({ name: 'foo' }).synth()",
}
`;

exports[`the "--rc" option can be used to specify projenrc location 1`] = `
Object {
  ".gitignore": "# ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".
node_modules/
!/.gitattributes
!/.projen/tasks.json
!/.projen/deps.json
!/.projen/files.json
",
  ".projen/files.json": Object {
    "//": "~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".",
    "files": Array [
      ".gitattributes",
      ".gitignore",
      ".projen/deps.json",
      ".projen/files.json",
      ".projen/tasks.json",
    ],
  },
  ".projen/tasks.json": Object {
    "//": "~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".",
    "tasks": Object {
      "build": Object {
        "description": "Full release build",
        "name": "build",
        "steps": Array [
          Object {
            "spawn": "default",
          },
          Object {
            "spawn": "pre-compile",
          },
          Object {
            "spawn": "compile",
          },
          Object {
            "spawn": "post-compile",
          },
          Object {
            "spawn": "test",
          },
          Object {
            "spawn": "package",
          },
        ],
      },
      "compile": Object {
        "description": "Only compile",
        "name": "compile",
      },
      "default": Object {
        "description": "Synthesize project files",
        "name": "default",
      },
      "eject": Object {
        "description": "Remove projen from the project",
        "env": Object {
          "PROJEN_EJECTING": "true",
        },
        "name": "eject",
        "steps": Array [
          Object {
            "spawn": "default",
          },
        ],
      },
      "package": Object {
        "description": "Creates the distribution package",
        "name": "package",
      },
      "post-compile": Object {
        "description": "Runs after successful compilation",
        "name": "post-compile",
      },
      "pre-compile": Object {
        "description": "Prepare the project for compilation",
        "name": "pre-compile",
      },
      "test": Object {
        "description": "Run tests",
        "name": "test",
      },
    },
  },
  ".projen/tree.json": Object {
    "tree": Object {
      "children": Object {
        ".gitattributes": Object {
          "constructInfo": Object {
            "fqn": "projen.GitAttributesFile",
            "version": "0.0.0",
          },
          "id": ".gitattributes",
          "path": "foo/.gitattributes",
        },
        ".gitignore": Object {
          "constructInfo": Object {
            "fqn": "projen.IgnoreFile",
            "version": "0.0.0",
          },
          "id": ".gitignore",
          "path": "foo/.gitignore",
        },
        ".projen--files.json": Object {
          "constructInfo": Object {
            "fqn": "projen.JsonFile",
            "version": "0.0.0",
          },
          "id": ".projen--files.json",
          "path": "foo/.projen--files.json",
        },
        "Dependencies": Object {
          "children": Object {
            ".projen--deps.json": Object {
              "constructInfo": Object {
                "fqn": "projen.JsonFile",
                "version": "0.0.0",
              },
              "id": ".projen--deps.json",
              "path": "foo/Dependencies/.projen--deps.json",
            },
          },
          "constructInfo": Object {
            "fqn": "projen.Dependencies",
            "version": "0.0.0",
          },
          "id": "Dependencies",
          "path": "foo/Dependencies",
        },
        "Logger": Object {
          "constructInfo": Object {
            "fqn": "projen.Logger",
            "version": "0.0.0",
          },
          "id": "Logger",
          "path": "foo/Logger",
        },
        "ProjectBuild": Object {
          "constructInfo": Object {
            "fqn": "projen.ProjectBuild",
            "version": "0.0.0",
          },
          "id": "ProjectBuild",
          "path": "foo/ProjectBuild",
        },
        "Tasks": Object {
          "children": Object {
            ".projen--tasks.json": Object {
              "constructInfo": Object {
                "fqn": "projen.JsonFile",
                "version": "0.0.0",
              },
              "id": ".projen--tasks.json",
              "path": "foo/Tasks/.projen--tasks.json",
            },
          },
          "constructInfo": Object {
            "fqn": "projen.Tasks",
            "version": "0.0.0",
          },
          "id": "Tasks",
          "path": "foo/Tasks",
        },
      },
      "constructInfo": Object {
        "fqn": "projen.Project",
        "version": "0.0.0",
      },
      "id": "foo",
      "path": "foo",
    },
    "version": "tree-0.1",
  },
}
`;
